# hyper-static

./: Cargo.toml  Makefile  README.md
.github/: dependabot.yaml
.github/workflows/: test.yaml
src/: lib.rs  serve.rs  streamer.rs
