[package]
name = "hyper-static"
version = "0.2.1"
edition = "2021"
rust-version = "1.60"
license = "MIT"
authors = ["Sergei S. <div@altertech.com>"]
repository = "https://github.com/alttch/hyper-static"
description = "A static file handler for Rust/Hyper with minimal logic"
keywords = ["hyper", "static", "file", "server", "http"]

[dependencies]
hyper = { version = "1.1.0" }
tokio = { version = "1.35.1", features = ["io-util", "fs"] }
hex = "0.4.3"
async-stream = "0.3.5"
chrono = "0.4.31"
chrono-tz = "0.8.5"
futures = "0.3.30"
bmart-derive = "0.1.2"
openssl = { version = "0.10.62", optional = true }
sha2 = { version = "0.10.8", optional = true }
http-body-util = "0.1.0"

[features]
default = ["hashing-openssl"]
hashing-openssl = ["dep:openssl"]
hashing-sha2 = ["dep:sha2"]
